--- a/docs/assets/themes/light.css
+++ b/docs/assets/themes/light.css
@@ -5,7 +5,7 @@
   --color-box-shadow-input: 0 0 4px #cccccc;
   --color-box-shadow-input-focus: 0 1px 6px #2C76F5FF;
 
-  --color-background-primary: #2c76f5;
+  --color-background-primary: #2c86f5;
   --color-background-body:  whitesmoke;
   --color-background-button: #0d6efd;
   --color-background-alert: #d55e5e;
@@ -16,6 +16,8 @@
   --color-background-poper: linear-gradient(to right, #fffefe 0%, #363636 100%);
   --color-background-dropdown: linear-gradient(to right, #ffffff 0%, #f1f1f1 100%);
   --color-background-nabvar: #f8f9fa !important;
+  --color-background-card-chat: rgba(57, 192, 237,.2);
+  --color-background-card-chat-answer: rgba(166, 194, 203, 0.2);
 
   --color-border-primary: #0d6efd;
   --color-border-button: #0d6efd;
@@ -36,4 +38,5 @@
   --color-fa-icon: #0d6efd;
   --color-popper: black;
   --color-button-fa-icon: whitesmoke;
+  --color-pagination-text: whitesmoke;
 }
