--- a/docs/light.css
+++ b/docs/light.css
@@ -1,33 +1,43 @@
-/*!***********************************************************************************************************************************************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[5].rules[0].oneOf[0].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[5].rules[0].oneOf[0].use[2]!./src/assets/themes/light.css?ngGlobalStyle ***!
-  \***********************************************************************************************************************************************************************************************************************************/
-:root{
-
+/* src/assets/themes/light.scss */
+:root {
   --color-box-shadow-primary: 0 14px 28px rgb(255, 255, 255), 0 10px 10px #c9c0c0;
   --color-box-shadow-content: 0 1px 3px 1px rgb(51, 122, 192);
   --color-box-shadow-input: 0 0 4px #cccccc;
   --color-box-shadow-input-focus: 0 1px 6px #2C76F5FF;
-
   --color-background-primary: #2c86f5;
-  --color-background-body:  whitesmoke;
+  --color-background-body: whitesmoke;
   --color-background-button: #0d6efd;
   --color-background-alert: #d55e5e;
-  --color-background-box-part: linear-gradient(to right, #ffffff 0%, #ffffff 100%);
-  --color-background-link-hover: linear-gradient(to right, #ffffff 0%, #f3f0f0 100%);
+  --color-background-box-part:
+    linear-gradient(
+      to right,
+      #ffffff 0%,
+      #ffffff 100%);
+  --color-background-link-hover:
+    linear-gradient(
+      to right,
+      #ffffff 0%,
+      #f3f0f0 100%);
   --color-background-link-hover-no-mobile: rgba(162, 160, 160, 0.32);
   --color-background-input-text: #ffffff;
-  --color-background-poper: linear-gradient(to right, #fffefe 0%, #363636 100%);
-  --color-background-dropdown: linear-gradient(to right, #ffffff 0%, #f1f1f1 100%);
+  --color-background-poper:
+    linear-gradient(
+      to right,
+      #fffefe 0%,
+      #363636 100%);
+  --color-background-dropdown:
+    linear-gradient(
+      to right,
+      #ffffff 0%,
+      #f1f1f1 100%);
   --color-background-nabvar: #f8f9fa !important;
   --color-background-card-chat: rgba(57, 192, 237,.2);
   --color-background-card-chat-answer: rgba(166, 194, 203, 0.2);
-
   --color-border-primary: #0d6efd;
   --color-border-button: #0d6efd;
   --color-border-content: #343a40;
   --color-border-content-primary: #343a40;
   --color-border-input-focus: #2C76F5FF;
-
   --color-primary: #0d6efd;
   --color-alert: #ffffff;
   --color-link-hover-span: black;
@@ -44,5 +54,5 @@
   --color-pagination-text: whitesmoke;
 }
 
-
-/*# sourceMappingURL=light.css.map*/
+/* angular:styles/global:light */
+/*# sourceMappingURL=light.css.map */
